♻️  Final refactor: pass in the aggregation type
So that we can support both number of trips and trip distance.
The aggregation type is now either `count` (for number of trips) or `sum` (for
trip distance). The count functionality has been switched from the previous
`value_counts` to using the standard `group_by` and `agg`

Testing done:
- generic_metrics runs through with no errors
https://github.com/e-mission/em-public-dashboard/pull/123#discussion_r1588038687
https://github.com/e-mission/em-public-dashboard/pull/123#discussion_r1588097070

This allows us to remove the old `process_distance_data` from `plots.py`
And we are now able to convert the distance metrics to also use this new format

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -170,8 +170,8 @@
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    # We will have text results corresponding to the axes for simplicity and consistency\n",
     "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Mode_confirm\", {distance_col: 'count'}, \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed, \"primary_mode\", {distance_col: 'count'}, \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
@@ -215,7 +215,7 @@
     "    # Plot entries\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)    \n",
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_commute, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_commute, \"Mode_confirm\", {distance_col: 'count'}, \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_mode, debug_df)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
@@ -242,7 +242,7 @@
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Trip_purpose\", \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_purpose, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Trip_purpose\", {distance_col: 'count'}, \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_purpose, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except Exception as e:\n",
@@ -287,8 +287,8 @@
     "    # Plot entries\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_u80, \"Mode_confirm\", \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
-    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_u80, \"Mode_confirm\", {distance_col: 'count'}, \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80, \"primary_mode\", {distance_col: 'count'}, \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except AttributeError as e:\n",
     "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
@@ -322,17 +322,18 @@
     "try:\n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
     "    \n",
-    "    df_confirm_dist_expanded, df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', distance_col, label_units_lower)\n",
-    "    df_sensed_dist_expanded, df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', distance_col, label_units_lower)  \n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirm_dist, \"Confirmed Trip\", \"Labeled by user\\n (Trip distance)\", ax[0], colors_mode)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_confirm_dist_expanded, file_name, \"Labeled by user\\n (Trip distance)\")\n",
-    "    plot_stacked_bar_chart(df_sensed_dist, \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Overall)\", ax[1], colors_sensed)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_sensed_dist_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
-    "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+    "    text_results = [[\"Unmodified Alt Text\", \"Unmodified HTML\"], [\"Unmodified Alt Text\", \"Unmodified HTML\"]]\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct, \"Mode_confirm\", {distance_col: 'sum'}, \"Labeled by user\\n (Trip distance)\", ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(expanded_ct_sensed, \"primary_mode\", {distance_col: 'sum'}, \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
+    "    set_title_and_save(fig, text_results, plot_title, file_name)    \n",
+    "except AttributeError as e:\n",
+    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
+    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
+    "    generate_missing_plot(\"Trip distance by mode\", debug_df_sensed, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, \"Number of trips below 80th percentile in each mode\")\n",
+    "except Exception as e:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
@@ -355,18 +356,23 @@
     "file_name =f\"total_trip_length_land{file_suffix}\"\n",
     "\n",
     "try:\n",
+    "    ## We do an existence check for the labeled df because we want to display the sensed value even if we don't have the labeled value\n",
+    "    ## but we don't need to have an existence check for sensed because in that case we will have no data to display\n",
+    "    labeled_land_trips_df = expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"] if \"Mode_confirm\" in expanded_ct.columns else None\n",
+    "    sensed_land_trips_df = expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"]\n",
+    "    \n",
     "    fig, ax = plt.subplots(nrows=2, ncols=1, figsize=(15,2*2), sharex=True)\n",
-    "    df_confirm_dist_land_expanded, df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"] if 'Mode_confirm' in expanded_ct.columns else pd.DataFrame(), 'Mode_confirm', distance_col, label_units_lower)\n",
-    "    df_sensed_dist_land_expanded, df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"] if 'primary_mode' in expanded_ct_sensed.columns else pd.DataFrame(), 'primary_mode', distance_col, label_units_lower)\n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_confirm_dist_land, \"Labeled by user\\n (Trip distance - Land)\", \"Confirmed Trip\", ax[0], colors_mode)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_confirm_dist_land_expanded, file_name, \"Labeled by user\\n (Trip distance - Land)\")\n",
-    "    plot_stacked_bar_chart(df_sensed_dist_land,  \"Sensed Trip\", \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], colors_sensed)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_sensed_dist_land_expanded, file_name, \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
-    "    add_stacked_bar_chart_title(fig, ax[0], plot_title, file_name)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    "
+    "    plot_and_text_stacked_bar_chart(labeled_land_trips_df, \"Mode_confirm\", {distance_col: 'sum'}, \"Labeled by user\\n (Trip distance - Land)\",  ax[0], text_results[0], colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(sensed_land_trips_df,  \"primary_mode\", {distance_col: 'sum'}, \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
+    "    set_title_and_save(fig, text_results, plot_title, file_name)    \n",
+    "except AttributeError as e:\n",
+    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
+    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
+    "    generate_missing_plot(\"Trip distance for land-based travel modes\", debug_df_sensed, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, \"Trip distance for land-based travel modes\")\n",
+    "except Exception as e:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
