--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -192,15 +192,13 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_purpose_trip_eb_expanded, df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose')\n",
+    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    plot_and_text_stacked_bar_chart(data_eb,\"Trip_purpose\", {distance_col: 'count'},f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_purpose, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_purpose_trip_eb, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_purpose)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_purpose_trip_eb_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
-    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except Exception as e:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
@@ -223,15 +221,13 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_replaced_dist_expanded, df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', distance_col, label_units_lower)\n",
+    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    plot_and_text_stacked_bar_chart(data_eb, \"Replaced_mode\", {distance_col: 'sum'}, \"Labeled by user\\n (Trip distance)\", ax, text_results, colors_mode, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_replaced_dist, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\", ax, colors_mode)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_replaced_dist_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
-    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except Exception as e:\n",
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
@@ -254,15 +250,13 @@
     "\n",
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
-    "    df_replaced_tc_expanded, df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode')\n",
+    "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
+    "    plot_and_text_stacked_bar_chart(data_eb, \"Replaced_mode\", {distance_col: 'count'}, f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_mode, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
-    "    create_alt_text_and_html_title(plot_title, file_name)\n",
-    "    plot_stacked_bar_chart(df_replaced_tc, f\"{mode_of_interest} trip\", f\"Labeled `{mode_of_interest}` by user\", ax, colors_mode)\n",
-    "    store_alt_text_and_html_stacked_bar_chart(df_replaced_tc_expanded, file_name, f\"Labeled `{mode_of_interest}` by user\")\n",
-    "    add_stacked_bar_chart_title(fig, ax, plot_title, file_name)\n",
+    "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
     "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    fig, ax = plt.subplots()\n",
+    "    plot_and_text_error(e, ax, file_name)"
    ]
   },
   {
