🥅 Improve error handling across the board
In f7f3590de7bcf527c6dbab062c27ec3c33cd4dcf, we added try/catch blocks for
`AttributeError` and `pd.errors.UndefinedVariableError` to handle errors in
pre-processing. However, apparently these were removed during subsequent
changes/refactors.

Since we have now moved the pre-processing to the cell in
c16e4ebd97c0079a7a64181cf7a6665f32b8ac04, this is even more important since
errors are very likely outside of the plot function.

In this change, we:
- recreate the merged_debug_df to use in cells where we plot both labeled and
  unlabeled data
- standardize the error handling by:
    - catching `KeyError` in addition to the others (consistent with observed behavior)
    - clearing the existing figure first so that we don't get two blank axes
    - plotting and generating the alt text with the same `plot_title_no_quality`
    - making sure to add alt_html to all of the except clauses for the new stacked bar charts

This fixes https://github.com/e-mission/em-public-dashboard/pull/123#issuecomment-2094004598

Testing done:
https://github.com/e-mission/em-public-dashboard/pull/123#issuecomment-2094541808

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -141,6 +141,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e77948fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_debug_df = debug_df.combine_first(debug_df_sensed)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1af1f02b",
    "metadata": {},
@@ -175,6 +185,11 @@
     "    \n",
     "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled & Sensed: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)        \n",
+    "    alt_html = store_alt_html_missing(merged_debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    # TODO: Future cleanup can pass in just the figure and have the function choose the last axis\n",
     "    fig, ax = plt.subplots()\n",
@@ -217,6 +232,11 @@
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
     "    plot_and_text_stacked_bar_chart(expanded_ct_commute.groupby(\"Mode_confirm\").agg({distance_col: 'count'}), \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_mode, debug_df)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    \n",
+    "    alt_html = store_alt_html_missing(debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -245,6 +265,11 @@
     "    plot_and_text_stacked_bar_chart(expanded_ct.groupby(\"Trip_purpose\").agg({distance_col: 'count'}), \"Labeled by user\\n (Confirmed trips)\", ax, text_results, colors_purpose, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "    alt_html = store_alt_html_missing(debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -290,11 +315,14 @@
     "    plot_and_text_stacked_bar_chart(expanded_ct_u80.groupby(\"Mode_confirm\").agg({distance_col: 'count'}), \"Labeled by user\\n (Confirmed trips)\", ax[0], text_results[0], colors_mode, debug_df)\n",
     "    plot_and_text_stacked_bar_chart(expanded_ct_sensed_u80.groupby(\"primary_mode\").agg({distance_col: 'count'}), \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
-    "except AttributeError as e:\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
     "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
     "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
-    "    generate_missing_plot(\"Number of trips below 80th percentile in each mode\", debug_df_sensed, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, \"Number of trips below 80th percentile in each mode\")\n",
+    "    plt.clf()\n",
+    "    plot_title_default = \"Number of trips below 80th percentile in each mode\"\n",
+    "    generate_missing_plot(plot_title_default, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_default)\n",
+    "    alt_html = store_alt_html_missing(merged_debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -326,11 +354,11 @@
     "    plot_and_text_stacked_bar_chart(expanded_ct.groupby(\"Mode_confirm\").agg({distance_col: 'sum'}), \"Labeled by user\\n (Trip distance)\", ax[0], text_results[0], colors_mode, debug_df)\n",
     "    plot_and_text_stacked_bar_chart(expanded_ct_sensed.groupby(\"primary_mode\").agg({distance_col: 'sum'}), \"Sensed by OpenPATH\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)    \n",
-    "except AttributeError as e:\n",
-    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
-    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
-    "    generate_missing_plot(\"Trip distance by mode\", debug_df_sensed, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, \"Number of trips below 80th percentile in each mode\")\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)  \n",
+    "    alt_html = store_alt_html_missing(merged_debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -365,11 +393,11 @@
     "    plot_and_text_stacked_bar_chart(labeled_land_trips_df.groupby(\"Mode_confirm\").agg({distance_col: 'sum'}), \"Labeled by user\\n (Trip distance - Land)\",  ax[0], text_results[0], colors_mode, debug_df)\n",
     "    plot_and_text_stacked_bar_chart(sensed_land_trips_df.groupby(\"primary_mode\").agg({distance_col: 'sum'}), \"Sensed by OpenPATH\\n (Trip distance - Land)\", ax[1], text_results[1], colors_sensed, debug_df_sensed)\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)    \n",
-    "except AttributeError as e:\n",
-    "    # we can have an missing attribute error during the pre-procssing, in which case we should show the missing plot\n",
-    "    # here, our pre-processing only relies on sensed data, so we use the debug_df_sensed\n",
-    "    generate_missing_plot(\"Trip distance for land-based travel modes\", debug_df_sensed, file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df_sensed, file_name, \"Trip distance for land-based travel modes\")\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)        \n",
+    "    alt_html = store_alt_html_missing(merged_debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
