♻️  Change the mode specific metrics to use the new library interface
This was fairly straightforward.
Since this now introduces pre-processing into the cell, we also need to copy
over the proper error handling.

I have chosen to keep the quality text untouched here, since all of these are
single-bar plots.

Testing done:
- Ran with and without data, notebook ran with no errors

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -193,9 +193,14 @@
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
-    "    plot_and_text_stacked_bar_chart(data_eb,\"Trip_purpose\", {distance_col: 'count'},f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_purpose, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(data_eb.groupby(\"Trip_purpose\").agg({distance_col: 'count'}),f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_purpose, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    \n",
+    "    alt_html = store_alt_html_missing(debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -222,9 +227,14 @@
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
-    "    plot_and_text_stacked_bar_chart(data_eb, \"Replaced_mode\", {distance_col: 'sum'}, \"Labeled by user\\n (Trip distance)\", ax, text_results, colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(data_eb.groupby(\"Replaced_mode\").agg({distance_col: 'sum'}), \"Labeled by user\\n (Trip distance)\", ax, text_results, colors_mode, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    \n",
+    "    alt_html = store_alt_html_missing(debug_df, file_name, plot_title_no_quality)\n",
     "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
@@ -251,10 +261,15 @@
     "try:\n",
     "    fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
     "    text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]\n",
-    "    plot_and_text_stacked_bar_chart(data_eb, \"Replaced_mode\", {distance_col: 'count'}, f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_mode, debug_df)\n",
+    "    plot_and_text_stacked_bar_chart(data_eb.groupby(\"Replaced_mode\").agg({distance_col: 'count'}), f\"Labeled `{mode_of_interest}` by user\", ax, text_results, colors_mode, debug_df)\n",
     "    plot_title = plot_title_no_quality + \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
     "    set_title_and_save(fig, text_results, plot_title, file_name)\n",
-    "except:\n",
+    "except (AttributeError, KeyError, pd.errors.UndefinedVariableError) as e:\n",
+    "    plt.clf()\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)    \n",
+    "    alt_html = store_alt_html_missing(debug_df, file_name, plot_title_no_quality)    \n",
+    "except Exception as e:\n",
     "    fig, ax = plt.subplots()\n",
     "    plot_and_text_error(e, ax, file_name)"
    ]
@@ -389,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
