switch from composite to confirmed trips

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -131,6 +131,7 @@
     "        data_key = list(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'].keys())[0]\n",
     "        row = pd.json_normalize(df.loc[i].user_input['trip_user_input']['data']['jsonDocResponse'][data_key])\n",
     "        row['user_id'] = df.loc[i].user_id\n",
+    "        row['survey_name'] = df.loc[i]['survey_name']\n",
     "        rows.append(row)\n",
     "        \n",
     "    if len(rows) > 0:\n",
@@ -199,13 +200,13 @@
    "source": [
     "#load all of the composite trips - require sections\n",
     "tq = scaffolding.get_time_query(year, month)\n",
-    "all_composite_trips = scaffolding.load_all_composite_trips(tq)\n",
+    "all_confirmed_trips = scaffolding.load_all_confirmed_trips(tq)\n",
     "#we need to filter out trips (based on if including test users)\n",
-    "all_composite_trips = scaffolding.filter_composite_trips(all_composite_trips, program, include_test_users)\n",
+    "all_confirmed_trips = scaffolding.filter_composite_trips(all_confirmed_trips, program, include_test_users)\n",
     "\n",
-    "if len(all_composite_trips) > 0:\n",
+    "if len(all_confirmed_trips) > 0:\n",
     "    #remove blank inputs\n",
-    "    survey_trips = all_composite_trips[all_composite_trips['user_input'] != {}]\n",
+    "    survey_trips = all_confirmed_trips[all_confirmed_trips['user_input'] != {}]\n",
     "\n",
     "    #survey counts df\n",
     "    survey_trips = survey_trips.reset_index()\n",
@@ -214,12 +215,6 @@
     "    #gather the cols needed for charts and text\n",
     "    survey_trips = survey_trips[['survey_name', 'user_id', 'user_input']]\n",
     "    \n",
-    "    # transform data to meet a data format requirement\n",
-    "    all_composite_trips['sections'] = all_composite_trips['sections'].apply(lambda x: [x[0]['data']] if len(x) > 0 else x)\n",
-    "\n",
-    "    #only want trips with sections\n",
-    "    all_composite_trips = all_composite_trips[all_composite_trips['sections'].str.len() > 0]\n",
-    "    print(len(all_composite_trips), \"trips with sections\")\n",
     "else:\n",
     "    survey_trips = pd.DataFrame()"
    ]
@@ -275,6 +270,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5732576d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge any cols with the same name into 1 col -- should have different values in their survey_name col\n",
+    "#https://stackoverflow.com/questions/24390645/python-pandas-merge-samed-name-columns-in-a-dataframe\n",
+    "def sjoin(x): return ';'.join(x[x.notnull()].astype(str))\n",
+    "df_responses = df_responses.groupby(level=0, axis=1).apply(lambda x: x.apply(sjoin, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7bcebeef",
    "metadata": {
     "scrolled": false
@@ -284,39 +292,49 @@
     "#create one plot per question in the survey\n",
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
-    "    debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
-    "    \n",
+    "#     debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
+    "    debug_df = pd.DataFrame()\n",
     "\n",
     "    for col in quest_dict[survey_name].keys():\n",
     "        \n",
+    "        print(col)\n",
+    "        \n",
     "        filename = col + file_suffix\n",
-    "        plot_title_no_quality = quest_dict[survey_name][col]\n",
+    "        plot_title_no_quality = survey_name + \"\\n\" + quest_dict[survey_name][col]\n",
     "\n",
     "        try:\n",
     "            quest_frame = df_responses.copy()\n",
-    "            quest_frame = quest_frame[quest_frame[col] != \"\"]\n",
-    "            qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
+    "            \n",
+    "#             qual_text = scaffolding.get_quality_text(total_dfs[survey_name], quest_frame, mode_of_interest, include_test_users)\n",
+    "            qual_text = \"debug qual text later\"\n",
     "            plot_title = plot_title_no_quality+'\\n'+qual_text\n",
     "            \n",
-    "            labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
-    "            labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
-    "            values = quest_frame[col].value_counts(dropna=True).tolist()\n",
+    "            fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(15,2*1), sharex=True)\n",
+    "            \n",
+    "            # We will have text results corresponding to the axes for simplicity and consistency\n",
+    "            \n",
+    "            quest_frame[col] = quest_frame[col].apply(lambda x: traslate_options(x, opt_dict))\n",
+    "#             quest_frame[col] = traslate_options(quest_frame[col], opt_dict)\n",
+    "            text_results = [\"Unmodified Alt Text\", \"Unmodified HTML\"]  \n",
     "\n",
-    "            pie_chart_purpose(plot_title, labels, values, color_map, filename)\n",
-    "            alt_text = store_alt_text_pie(pd.DataFrame(values, labels), filename, plot_title)\n",
+    "            plot_df = quest_frame.groupby(['survey_name', col]).count().reset_index()\n",
+    "            plot_df = plot_df[plot_df['survey_name'] == survey_name]\n",
+    "            plot_df = plot_df.set_index(col)[['start']]\n",
+    "            \n",
+    "#             labels = quest_frame[col].value_counts(dropna=True).keys().tolist()\n",
+    "#             labels = traslate_options(quest_frame[col].value_counts(dropna=True).keys().tolist(), opt_dict)\n",
+    "#             values = quest_frame[col].value_counts(dropna=True).tolist()       \n",
+    "#             plot_df = pd.DataFrame({\"label\": labels, \"value\": values}).set_index('label')\n",
+    "            \n",
+    "            plot_and_text_stacked_bar_chart(plot_df, \"Responses\", ax, text_results, color_map, debug_df)\n",
+    "            \n",
+    "            set_title_and_save(fig, text_results, plot_title, filename)\n",
+    "            \n",
     "\n",
     "        except:\n",
     "            generate_missing_plot(plot_title_no_quality, debug_df, filename)\n",
     "            alt_text = store_alt_text_missing(debug_df, filename, plot_title_no_quality)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e59ca0d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
