update translation of options - issues with numbers

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -151,15 +151,22 @@
     "#output: translated to readable list, with multiples handled\n",
     "#the for loop will run n times, where num_options <= n < all possible combinations of options\n",
     "#if people are selecting many different combinations, could be large\n",
-    "def traslate_options(labels, opt_dict):\n",
-    "    for i in range(len(labels)):\n",
-    "        l_labels = str(labels[i]).split(\" \")\n",
+    "def traslate_options(label, opt_dict):\n",
+    "    try:\n",
+    "        l_labels = str(label).split(\" \")\n",
     "        for k in range(len(l_labels)):\n",
-    "            l_labels[k] = opt_dict[l_labels[k]]\n",
+    "            try:\n",
+    "                #workaround for the case wher we had \"5.0\" and need \"5\"\n",
+    "                l_labels[k] = opt_dict[str(int(float(l_labels[k])))]\n",
+    "            except:\n",
+    "                l_labels[k] = opt_dict[l_labels[k]]\n",
     "        sep = \"\\n\"\n",
-    "        labels[i] = sep.join(l_labels)\n",
-    "    \n",
-    "    return labels\n",
+    "        \n",
+    "        final = sep.join(l_labels)\n",
+    "        print(label, final)\n",
+    "        return final\n",
+    "    except:\n",
+    "        return label #probably a row without an answer\n",
     "\n",
     "#create a debug dataframe\n",
     "def generate_debug_df(program, include_test_users, full_df, labeled_df):\n",
