update color mapping
under construction since this is breaking some of the charts currently

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -239,7 +239,20 @@
     "print(\"Options dictionary:\\n\", opt_dict)\n",
     "\n",
     "#color dictionary\n",
-    "color_map = scaffolding.mapping_color_surveys(opt_dict)\n",
+    "from collections import OrderedDict\n",
+    "def mapping_color_surveys(dic_options):\n",
+    "    dictionary_values = (list(OrderedDict.fromkeys(dic_options.values())))\n",
+    "#     dictionary_values = list(dic_options.keys())\n",
+    "\n",
+    "    colors = {}\n",
+    "    for i in range(len(dictionary_values)):\n",
+    "        colors[dictionary_values[i]] = plt.cm.tab10.colors[i%10]\n",
+    "    \n",
+    "    return colors\n",
+    "\n",
+    "color_map = mapping_color_surveys(opt_dict)\n",
+    "\n",
+    "print(\"\\n\", color_map)\n",
     "\n",
     "#format survey trips into responses dataframe\n",
     "df_responses = create_dataframe(survey_trips)\n",
